# Discrete-Math

./: CMakeLists.txt  test.cpp
Combination/: exercise3.cpp  tempCodeRunnerFile.cpp
LTCS/: 01.cpp  03.cpp  04.cpp  05.cpp  06.cpp  08.cpp
LTCS/01/: CMakeLists.txt
LTCS/02/: CMakeLists.txt  main.cpp
LTCS/07/: CMakeLists.txt  main.cpp
LTCS/09/: CMakeLists.txt  main.cpp
LTCS/10/: main.cpp
LTCS/11/: main.cpp
LTCS/12/: main.cpp
LTCS/13/: main.cpp
LTCS/14/: main.cpp
LTCS/15/: main.cpp
LTCS/16/: main.cpp
LTCS/17/: CMakeLists.txt  main.cpp
LTCS/18/: main.cpp
LTCS/19/: main.cpp
LTCS/20/: CMakeLists.txt  main.cpp
LTCS/21/: main.cpp
LTCS/22/: main.cpp
LTCS/23/: main.cpp
LTCS/24/: main.cpp
LTCS/26/: main.cpp
LTCS/27/: main.cpp
LTCS/28/: 28.cpp  Diem.out.txt
Recursive/: rally.cpp  sum_2uoc.cpp  sum_uocsoOf_ n_2.cpp  thap_HN_4.cpp
Recursive/EX1/: MaxOf_n_h.cpp  Sum_a.cpp  Sum_b.cpp  Sum_f.cpp  Sum_g.cpp  UCLN_e.cpp  dao_nguoc_n.cpp  nhi_phan_c.cpp  tempCodeRunnerFile.cpp
Recursive/Fibonacci/: fibonaci_3.cpp  tempCodeRunnerFile.cpp
algorithm/: binarySearch.cpp
algorithmBacktracking/: algorithm.cpp  chess.cpp
algorithmBacktracking/chess/: chess.cpp
algorithmBacktracking/practice1Page13/: practice1Page13.cpp
bai_tap_nop/de_quy/: fibnacci.cpp
bai_tap_nop/ma_tran/: check_matran_chuyenvi.cpp  check_matran_donvi.cpp
bai_tap_nop/quay_lui/: chinhHop.cpp  chinhHopLap.cpp
bai_tap_nop/tap_hop/: chenPtu.cpp  lucLuong_arr.cpp
listed/: index.c  index.cpp  prime.cpp  toHop.cpp
ly_thuyet_do_thi/: DOTHI.txt  dijkstra.cpp  dothi2.txt  floyd.cpp  inputOutput.cpp  kruskal.cpp  prim.cpp  tempCodeRunnerFile.cpp  test.cpp  wayMin.cpp
matrix/: matrix.cpp
recovery_system/: demo1.cpp  ex1.cpp  ex2.cpp
(+2 files in other folders)
